--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   },
   "rules": {
     "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": 0,
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
     "eol-last": ["error", "always"],
