--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.2.2",
+    "mongodb-memory-server": "^10.1.2",
     "mongoose": "^6.1.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
