--- a/docs/location.yaml
+++ b/docs/location.yaml
@@ -38,3 +38,50 @@ paths:
           description: Unauthorized, missing or invalid API key
         '500':
           description: Internal server error
+
+  /cities/{countryCode}:
+    get:
+      summary: Get list of cities for a country
+      description: Returns a list of cities for the specified country code.
+      tags:
+        - Location
+      parameters:
+        - in: path
+          name: countryCode
+          required: true
+          schema:
+            type: string
+          description: ISO2 code of the country to retrieve cities for
+          example: "CA"
+        - in: header
+          name: X-CSCAPI-KEY
+          required: true
+          schema:
+            type: string
+          description: API key for authentication
+      responses:
+        '200':
+          description: A list of cities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      description: The unique identifier of the city
+                      example: 101
+                    name:
+                      type: string
+                      description: The name of the city
+                      example: "Toronto"
+        '400':
+          description: Bad request, invalid or missing country code
+        '401':
+          description: Unauthorized, missing or invalid API key
+        '404':
+          description: Cities not found for the given country code
+        '500':
+          description: Internal server error
