--- a/docs/location.yaml
+++ b/docs/location.yaml
@@ -39,7 +39,7 @@ paths:
         '500':
           description: Internal server error
 
-  /location/cities/{countryCode}:
+  /location/{countryCode}/cities:
     get:
       summary: Get list of cities for a country
       description: Returns a list of cities for the specified country code.
